[package]
name = "bin_eye_bt_receiver"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Quick and Dirty receiver app for Binary Eye's Forward scan via Bluetooth functionality Written in Rust."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.1", features = ["full"] }
tokio = { version = "1", features = [
    "fs",
    "io-std",
    "io-util",
    "process",
    "rt-multi-thread",
] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
tab-pty-process = "0.2"
tokio-compat-02 = "0.2"
pretty-hex = "0.4"
bytes = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
hex = { version = "0.4" }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-jsonlines = { version = "0.5.0", features = ["async"] }
futures = "0.3"
enigo = { features = ["wayland"], git = "https://github.com/enigo-rs/enigo.git", rev = "e5773b56a9383e30ac215a0bd40250bc30d7f54f" }
percent-encoding-rfc3986 = "0.1.3"
